feat: update doc

--- a/src/content/docs/guides/why.mdx
+++ b/src/content/docs/guides/why.mdx
@@ -2,4 +2,49 @@
 title: 为什选择 DevNow ？
 description: 介绍 DevNow 开源项目的初衷和一些关于博客的思考
 ---
-22
+
+**DevNow** 是一个现代化的、简约的开源技术博客项目。支持 Vercel 一键部署，支持评论、搜索等功能，欢迎大家提issue、star、fork使用。
+
+
+目前已经把我博客的内容都迁移过来了，同时也承接着 weekly 内容平台，每周发布一些技术圈中热度比较高的内容。主要是技术相关的，可能会穿插一些其他的话题和一些开源项目介绍等。
+
+我的博客地址： https://www.laughingzhu.cn/
+
+
+> 为什么会想着来做 `DevNow` 这样一个开源博客项目呢？
+>
+> That's a good question!
+
+在做之前我也想了蛮久这个问题，到底要不要花时间去整理这样一个开源博客模版项目，因为这个市面上已经有很多类似的、且成熟的博客系统，我开源出来的意义是啥呢？
+
+总结了下大概得思考如下：
+
+### 无我所爱
+
+虽然市面上有很多成熟的博客系统，如 [WordPress](https://wordpress.org/)、[Hexo](https://hexo.io/zh-cn/)、[Halo](https://www.halo.run/) 等，但是都没有我喜欢的 UI/UX ，这个就是最重要的一个出发点。
+
+### 轻量级、易部署
+
+市面上这些成熟的系统整体来说都比较重，不管是部署方面的还是功能方面，需要数据库、管理后台、鉴权等等一些列的配置。其实很多人只是需要一个简简单单的博客，越轻量级越好，部署越简单越好。
+
+### 个性化
+
+我算是一个个人属性较强的开发者，希望属于我的内容上打上标签🏷，让大家看大相关的标签就知道是我，比如 `LaughingZhu` 这个标签，这个是从港剧《潜行狙击》中来的，在搜索引擎中搜这个，应该就能找到关于俺的内容，这就是我想要的。
+
+### 关于沉淀和分享
+
+作为开发者，我自己也常常会写一些文章（技术、生活、兴趣），陆陆续续搭建过好几个博客，总是感觉之前的太花里胡哨，所以就想着整一个简洁的博客，正好之前朋友也想要一个类似的博客来承载他自己的 Weekly ，所以我自己“一拍即合”。
+
+还有一个自己的原因就是希望通过这个项目来积累一些开源项目的经验，和熟悉一下这段时间感兴趣的技术，如 TailWind Css、Astro、Shadcn/ui 等等。
+
+
+
+
+之前的：
+
+![before](https://r2.laughingzhu.cn/27691398de101e7b582713edc101b1c3-a869ab.png)
+
+现在的：
+
+![now](https://r2.laughingzhu.cn/3bcbae51ddcea2cdf738a11c2556a5cd-48f5c9.webp)
+
