feat: update doc

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: 开始使用
-      link: /guides/example/
+      link: /guides/why
       icon: right-arrow
     - text: 在 GitHub 上查看
       link: https://github.com/LaughingZhu/DevNow
