feat: update doc

--- a/src/content/docs/reference/configuration.mdx
+++ b/src/content/docs/reference/configuration.mdx
@@ -120,7 +120,7 @@ export const MOBILE_MENU: Menu[] = [...LEFT_MENU, ...RIGHT_MENU].filter(
 
 项目基础信息配置
 
-```ts title='config.ts'
+```ts title='config/index.ts'
 
 export default {
   /** 网站配置信息 start */
