feat: update doc

--- a/src/content/docs/feature/comment.mdx
+++ b/src/content/docs/feature/comment.mdx
@@ -6,7 +6,7 @@ description: 支持文章评论
 支持文章评论，目前只支持 Giscus 评论，可以在配置文件中修改，具体内容在 `src/components/Comments.astro` 中进行配置。
 
 
-### 评论开关配置：
+### 评论开关配置
 
 ```ts title="src/config/index.ts"
 export default {
@@ -17,7 +17,7 @@ export default {
 
 ```
 
-### 环境变量配置：
+### 环境变量配置
 
 具体信息获取可以参考 [Giscus](https://giscus.app/zh-CN)
 
