feat: upload embed doc

--- a/src/content/docs/feature/embed.mdx
+++ b/src/content/docs/feature/embed.mdx
@@ -1,6 +1,10 @@
 ---
 title: 媒体嵌入
 description: 支持媒体嵌入，目前支持 Youtube、Twitter、Link、Vimeo
+sidebar:
+  badge:
+    text: New
+    variant: tip
 ---
 
 为了你的网站或博客有更好的体验，现在我们支持更多的媒体文件。你可以直接在网站中嵌入视频文件了，让您的网站内容更加丰富起来。
@@ -9,30 +13,66 @@ description: 支持媒体嵌入，目前支持 Youtube、Twitter、Link、Vimeo
 
 ### Youtube
 
+```mdx title="demo.mdx"
 https://youtu.be/BAzA6fPkQjE?si=SrET_PGPmeajwSRw
+```
 
-![Youtube](https://r2.laughingzhu.cn/23e80f76855ddb01b66548ad827bac4a-39ebab.webp)
+import { YouTube } from 'astro-embed';
+
+<YouTube id="BAzA6fPkQjE" />
 
 ### Vimeo
 
+```mdx title="demo.mdx"
 https://vimeo.com/974477342
+```
 
-![Vimeo](https://r2.laughingzhu.cn/a32da429e0e5dbc8e6701ec65c65c730-31ef2c.webp)
+import { Vimeo } from 'astro-embed';
+
+<Vimeo id="32001208" />
 
 ### Links
 
+```mdx title="demo.mdx"
 https://www.laughingzhu.cn/posts/hello-world
+```
 
-![Links](https://r2.laughingzhu.cn/81770b9732adf2f0099e0fc321c14cc6-5b2615.webp)
+import { LinkPreview } from 'astro-embed';
+
+<LinkPreview id="https://www.laughingzhu.cn/posts/hello-world" />
 
 ### X (Twitter)
 
-https://twitter.com/astrodotbuild/status/1511750228428435457
+```mdx title="demo.mdx"
 
-![Twitter](https://r2.laughingzhu.cn/9680a445450ff088decd7ff21b083cef-3892a7.webp)
+https://x.com/astrodotbuild/status/1511750228428435457
+```
 
-备注：目前 Twitter 只支持解析 `twitter.com` 域名，`x.com` 暂未支持。
+import { Tweet } from 'astro-embed';
 
+<Tweet id="https://x.com/astrodotbuild/status/1511750228428435457" />
+
+### Bluesky
+
+```mdx title="demo.mdx"
+https://bsky.app/profile/astro.build/post/3lcgawc2gp22x
+```
+
+import { BlueskyPost } from 'astro-embed';
+
+<BlueskyPost id="https://bsky.app/profile/astro.build/post/3lcgawc2gp22x" />
+
+### BaselineStatus
+
+```mdx title="demo.mdx"
+import { BaselineStatus } from 'astro-embed';
+
+<BaselineStatus id="scroll-snap" />
+```
+
+import { BaselineStatus } from 'astro-embed';
+
+<BaselineStatus id="scroll-snap" />
 > 📢 提示：目前实现基于 Astro 生态的一个扩展
 > [Astro Embed](https://astro-embed.netlify.app/)
 > 后续会关注支持更多的媒体平台
