--- a/src/content/docs/guides/feature.mdx
+++ b/src/content/docs/guides/feature.mdx
@@ -19,4 +19,4 @@ description: 介绍 DevNow 开源项目的功能
 - ✅ **支持 Comments** 
 - ✅ **支持分页**
 - ✅ **标注**
-- ✅ **媒体嵌入**（目前支持 Youtube、Twitter、Link、Vimeo）
+- ✅ **媒体嵌入**（目前支持 Youtube、Twitter、Link、Vimeo、Bluesky、 BaselineStatus）
